<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widget_recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/widget_list_text_padding"
            android:textColor="@color/orangeDark"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            tools:text="@string/nutella_pie" />

        <ListView
            android:id="@+id/widget_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dividerHeight="@dimen/widget_list_divider" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_ingredients"
            android:textColor="@color/orangeDark"
            android:textSize="@dimen/widget_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/widget_chef_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/chef_image_desc"
            android:src="@drawable/chef" />

    </LinearLayout>

</FrameLayout>