<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view_recipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/simple_margin"
            android:layout_marginLeft="@dimen/simple_margin"
            android:layout_marginRight="@dimen/simple_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/simple_margin"
                    android:layout_marginTop="@dimen/simple_margin"
                    android:background="@drawable/divider_recyclerview"
                    android:padding="@dimen/simple_padding"
                    android:text="@string/ingredients_title"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_add_to_widget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/simple_margin"
                    android:padding="@dimen/simple_padding"
                    android:text="@string/add_to_widget_button"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="@dimen/simple_padding">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/divider_recyclerview"
                android:padding="@dimen/simple_padding"
                android:text="@string/add_ingredients_to_widget"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_basic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_view_height"
                android:layout_marginTop="@dimen/simple_margin"
                android:background="@drawable/divider_recyclerview" />

            <TextView
                android:id="@+id/tv_steps_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/simple_margin"
                android:background="@drawable/divider_recyclerview"
                android:padding="@dimen/simple_padding"
                android:text="@string/steps_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/simple_margin"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>


